fix login & signup error